src/tests/test-src/errors/E43-bad-arg-val.syntran
// E43: bad-arg-val
// A `&` reference parameter was given a plain value argument instead of a
// reference

fn f(x: &i32)
{
}

f(1);
